# eband_local_planner

./: .gitignore  .travis.rosinstall  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  elp_mbf_plugin.xml  manifest.xml  package.xml  stack.xml
cfg/: EBandPlanner.cfg
eband_local_planner/: .gitignore
eband_local_planner/include/eband_local_planner/: eband_local_planner.h  eband_trajectory_controller.h
eband_local_planner/launch/rviz_launch/: rviz_move_base.launch
eband_local_planner/src/: eband_local_planner.cpp  eband_local_planner_ros.cpp  eband_trajectory_controller.cpp  eband_visualization.cpp
include/eband_local_planner/: conversions_and_types.h  directed_dfs.h  eband_local_planner.h  eband_local_planner_ros.h  eband_trajectory_controller.h  eband_visualization.h  path_finder.h
launch/stage_launch/: eband_planner_params.yaml
segbot_controller/: CMakeLists.txt  mainpage.dox  manifest.xml  rosbuild.cmake
segbot_controller/bak/: hello_world.cpp  main.cpp  main_window.cpp  main_window.hpp
segbot_controller/include/segbot_controller/: qnode.hpp
segbot_controller/src/: main_gui.cpp  qnode.cpp
segbot_navigation/: mainpage.dox  manifest.xml
segbot_navigation/config/base/: base_local_planner_params.yaml
segbot_navigation/config/costmap/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
segbot_navigation/config/eband/: costmap_common_params.yaml  eband_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
segbot_navigation/launch/: amcl.launch  amcl_demo.launch  amcl_eband_demo.launch  amcl_sbpl_demo.launch  eband_nav.launch  gmapping.launch  gmapping_demo.launch  joy_gmapping_demo.launch  kinect.launch  move_base.launch  move_base_eband.launch  move_base_sbpl.launch  openni.launch  rviz.launch
segbot_navigation/maps/: ens-basement-2012-05-17.pgm  ens-basement-2012-05-17.yaml  ens-basement-2012-07-26-edited.pgm  ens-basement-2012-07-26-edited.xcf  ens-basement-2012-07-26-edited.yaml  ens-basement-2012-07-26.pgm  ens-basement-2012-07-26.yaml
segbot_navigation/rviz/: eband_nav_rviz.vcg  nav.rviz  nav_eband.rviz  nav_rviz.vcg
segbot_navigation/sbpl/: segway_basic.mprim
src/: conversions_and_types.cpp  eband_local_planner.cpp  eband_local_planner_ros.cpp  eband_trajectory_controller.cpp  eband_visualization.cpp
