<package>
  <name>eband_local_planner</name>
  <version>0.3.0</version>
  <description>
    eband_local_planner implements a plugin to the
    base_local_planner. It implements the Elastic Band method on the
    SE2 manifold.
  </description>

  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/eband_local_planner</url>
  <url type="repository">https://github.com/utexas-bwi/eband_local_planner</url>
  <url type="bugtracker">https://github.com/utexas-bwi/eband_local_planner/issues</url>

  <author>Christian Connette</author>
  <author>Bhaskara Marthi</author>
  <author>Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>base_local_planner</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>cmake_modules</build_depend> <!-- to find Eigen -->
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>base_local_planner</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>

  <export>
    <nav_core plugin="${prefix}/elp_plugin.xml"/>
  </export>

</package>
